--- a/alati-server-side/src/main/resources/application.properties
+++ b/alati-server-side/src/main/resources/application.properties
@@ -2,8 +2,8 @@
 # = DATA SOURCE
 # ===============================
 spring.datasource.url=jdbc:mysql://localhost:3306/ucinci_test
-spring.datasource.username=testUser
-spring.datasource.password=testPass
+spring.datasource.username=root
+spring.datasource.password=root
 
 # ===============================
 # = JPA / HIBERNATE
